JumpScript/tests/baselines/reference/duplicatePropertiesInTypeAssertions01.errors.txt
tests/cases/conformance/expressions/typeAssertions/duplicatePropertiesInTypeAssertions01.jump(1,11): error TS2300: Duplicate identifier 'a'.
tests/cases/conformance/expressions/typeAssertions/duplicatePropertiesInTypeAssertions01.jump(1,22): error TS2300: Duplicate identifier 'a'.


==== tests/cases/conformance/expressions/typeAssertions/duplicatePropertiesInTypeAssertions01.jump (2 errors) ====
    let x = <{a: number; a: number}>{};
              ~
!!! error TS2300: Duplicate identifier 'a'.
                         ~
!!! error TS2300: Duplicate identifier 'a'.